--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "express": "^4.19.2",
     "express-react-views": "^0.11.0",
     "method-override": "^3.0.0",
+    "mongoose": "^8.4.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   }
